--- a/package.json
+++ b/package.json
@@ -15,5 +15,23 @@
   "bugs": {
     "url": "https://github.com/abhay676/bhahi-khata-backend/issues"
   },
-  "homepage": "https://github.com/abhay676/bhahi-khata-backend#readme"
+  "homepage": "https://github.com/abhay676/bhahi-khata-backend#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged && npm test"
+    }
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "husky": "^3.1.0",
+    "lint-staged": "^9.5.0"
+  }
 }
