--- a/package.json
+++ b/package.json
@@ -21,8 +21,13 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged && npm test"
+      "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "./src/*.{js,jsx,ts,tsx}": [
+      "eslint src/*.js --fix-dry-run"
+    ]
   },
   "devDependencies": {
     "eslint": "^6.8.0",
