--- a/package.json
+++ b/package.json
@@ -17,7 +17,14 @@
   },
   "homepage": "https://github.com/abhay676/bhahi-khata-backend#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.4.1",
+    "mongoose": "^5.8.3",
+    "validator": "^12.1.0"
   },
   "husky": {
     "hooks": {
@@ -37,6 +44,8 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "husky": "^3.1.0",
-    "lint-staged": "^9.5.0"
+    "lint-staged": "^9.5.0",
+    "nodemon": "^2.0.2",
+    "prettier": "1.19.1"
   }
 }
