--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.3",
+    "qrcode": "^1.4.4",
+    "speakeasy": "^2.0.0",
     "validator": "^12.1.0"
   },
   "husky": {
