--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.3",
+    "pdfkit": "^0.11.0",
     "qrcode": "^1.4.4",
     "speakeasy": "^2.0.0",
+    "uniqid": "^5.2.0",
     "validator": "^12.1.0"
   },
   "husky": {
