--- a/package.json
+++ b/package.json
@@ -5,18 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon src/server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://gitlab.com/abhay676/bhahi-khata-backend.git"
+    "url": "git+https://github.com/abhay676/bhahi-khata-backend.git.git"
   },
   "author": "Abhay Goswami",
   "license": "MIT",
   "bugs": {
-    "url": "https://gitlab.com/abhay676/bhahi-khata-backend/issues"
+    "url": "https://github.com/abhay676/bhahi-khata-backend.git/issues"
   },
-  "homepage": "https://gitlab.com/abhay676/bhahi-khata-backend#readme",
+  "homepage": "https://github.com/abhay676/bhahi-khata-backend.git#readme",
   "dependencies": {
     "@sendgrid/mail": "^6.4.0",
     "bcryptjs": "^2.4.3",
