--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend for Bhahi-khata",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --config ./jest.config.json",
     "start": "nodemon src/server.js"
   },
   "repository": {
@@ -55,6 +55,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "husky": "^4.2.3",
+    "jest": "^26.0.0",
     "lint-staged": "^10.0.9",
     "nodemon": "^2.0.2"
   }
