--- a/package.json
+++ b/package.json
@@ -4,22 +4,21 @@
   "description": "Backend for Bhahi-khata",
   "main": "index.js",
   "scripts": {
-    "test": "jest --config ./jest.config.json",
+    "test": "jest --config ./jest.config.json --coverage",
     "start": "nodemon src/server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/abhay676/bhahi-khata-backend.git.git"
   },
-  "author": "Abhay Goswami",
+  "author": "Abhay Goswami<https://abgoswami.me>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/abhay676/bhahi-khata-backend.git/issues"
   },
   "homepage": "https://github.com/abhay676/bhahi-khata-backend.git#readme",
   "dependencies": {
-    "@sendgrid/mail": "^6.4.0",
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -29,6 +28,7 @@
     "moment": "^2.24.0",
     "mongoose": "^5.8.3",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.4.6",
     "pdfkit": "^0.11.0",
     "qrcode": "^1.4.4",
     "speakeasy": "^2.0.0",
@@ -57,6 +57,7 @@
     "husky": "^4.2.3",
     "jest": "^26.0.0",
     "lint-staged": "^10.0.9",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "superagent": "^5.2.2"
   }
 }
