--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nodemailer": "^6.4.6",
     "pdfkit": "^0.11.0",
     "qrcode": "^1.4.4",
+    "slugify": "^1.4.0",
     "speakeasy": "^2.0.0",
     "uniqid": "^5.2.0",
     "validator": "^12.1.0",
